<resources>
    <string name="app_name">Griper</string>
    <string name="string_error_facebook_login_cancelled">Either Login through Facebook or via Email</string>
    <string name="string_error_facebook_login">Not able to login to Facebook, please try again</string>
    <string name="string_error_no_network">No Network</string>
    <string name="string_error_graph_api_failed">Not able to fetch data from Facebook, please try again</string>
    <string name="string_error_something_went_wrong">Something went wrong</string>
    <string name="string_login_with_facebook">Log in with Facebook</string>
    <string name="string_login_with_email">Or try your Email</string>
    <string name="string_log_out">Log out</string>
    <string name="string_facebook_app_id">1163524873773043</string>
    <string name="string_welcome_user">Welcome</string>
    <string name="string_welcome_login_screen_title">Take control of your neighbourhood in your hands</string>
    <string name="string_email_login_screen_title">Log into Griper</string>
    <string name="string_hint_email">Email</string>
    <string name="string_hint_password">Password</string>
    <string name="string_login_into_griper">Login</string>
    <string name="string_email_sign_up_title">New User? Sign Up</string>
    <string name="string_email_signup_screen_title">Sign up for Griper</string>
    <string name="string_sign_up_griper">Sign up</string>
    <string name="string_sign_up_success">Success. Please Login</string>
    <string name="string_hint_name">Full Name</string>
    <string name="string_email_already_registered_title">Already Registered? Login</string>
    <string name="string_password_length_error">Password must be atleast 6 characters</string>
    <string name="string_email_format_error">Enter a valid Email Address</string>
    <string name="string_name_length_error">Name cannot be less than 3 characters</string>

    <string name="string_accept_permissions">Please enable Camera and Storage Permissions from System Settings</string>
    <string name="string_show_location">Turn on High Accuracy under Location Settings</string>

    <plurals name="likes_count">
        <item quantity="one">%d</item>
        <item quantity="other">%d</item>
    </plurals>

    <string-array name="string_array_fb_permissions">
        <item>public_profile</item>
        <item>email</item>
    </string-array>

    <!-- Camera -->
    <string name="cancel_label">Cancel</string>
    <string name="ok_label">Ok</string>

    <string name="settings_video_quality_title">Video size %s</string>
    <string name="settings_photo_quality_title">Photo size</string>

    <!-- Preview Activity -->
    <string name="preview_controls_confirm">Save</string>
    <string name="preview_controls_retake">Repeat</string>
    <string name="preview_controls_cancel">Cancel</string>
    <string name="preview_controls_crop">Crop</string>
    <string name="preview_controls_original_ratio_label">Original</string>

    <string name="string_title_not_empty">Title field cannot be empty</string>
    <string name="string_category_not_empty">Please select one of the categories</string>
    <string name="string_griper_app_name">Griper</string>
    <string name="string_comments">Comments</string>
    <string name="string_likes">Likes</string>
    <string name="string_description_not_empty">Description cannot be empty</string>
    <string name="string_griper_should_this_be_fixed">Should this be fixed?</string>
    <string name="string_griper_feed_title">Title? Just get going!</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_none">-</string>
    <string name="string_my_griper">My Griper</string>
    <string name="string_name">Sarthak Arora</string>
    <string name="string_issues_resolved">Issues Resolved</string>
    <string name="string_volunteering">Volunteering</string>
    <string name="string_my_posts">My Posts</string>
    <string name="string_my_gripes">My Gripes</string>
    <string name="string_zero">0</string>
    <string name="string_my_likes">My Likes</string>
    <string name="string_test_gripe_text">Graffiti in Manchester</string>
    <string name="string_add_comment">Add a comment...</string>
    <string name="string_post">POST</string>
    <string name="string_user">Sarthak Arora</string>

</resources>
