<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_5dp"
        android:layout_marginLeft="@dimen/dimen_7dp"
        android:layout_marginRight="@dimen/dimen_7dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.griper.griperapp.widgets.AppTextView
                android:id="@+id/textViewCardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/string_griper_feed_title"
                android:textColor="@color/color_black"
                android:textSize="@dimen/dimen_17sp"
                app:textStyle="@integer/OPEN_SANS_REGULAR" />

            <com.griper.griperapp.widgets.AppTextView
                android:id="@+id/gripeCardLocation"
                style="@style/Theme.App.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewCardTitle"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="@dimen/dimen_3dp"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/dimen_8dp"
                android:paddingLeft="@dimen/dimen_5dp"
                android:paddingRight="@dimen/dimen_8dp"
                android:paddingStart="@dimen/dimen_5dp"
                android:paddingTop="7dp"
                android:singleLine="true"
                android:text="@string/string_show_location"
                android:textColor="@color/color_black"
                android:textSize="14sp">

            </com.griper.griperapp.widgets.AppTextView>

            <RelativeLayout
                android:id="@+id/imageGripeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gripeCardLocation">

                <com.griper.griperapp.widgets.SquareImageView
                    android:id="@+id/imageCardGripe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:background="@drawable/img_placeholder"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_placeholder" />

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/socialLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageGripeLayout"
                android:layout_marginBottom="@dimen/dimen_7dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_7dp">

                <TextSwitcher
                    android:id="@+id/tsLikesCounter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="5dp"
                    android:inAnimation="@anim/slide_in_likes_counter"
                    android:outAnimation="@anim/slide_out_likes_counter">


                    <com.griper.griperapp.widgets.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/string_none"
                        android:textColor="@color/color_black"
                        app:textStyle="@integer/OPEN_SANS_REGULAR" />

                    <com.griper.griperapp.widgets.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/color_black"
                        app:textStyle="@integer/OPEN_SANS_REGULAR" />
                </TextSwitcher>

                <ImageView
                    android:id="@+id/ivLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_favorite_border_black_24dp" />

                <TextSwitcher
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginStart="@dimen/dimen_15dp">

                    <com.griper.griperapp.widgets.AppTextView
                        android:id="@+id/tvCommentCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/string_none"
                        android:textColor="@color/color_black" />

                    <com.griper.griperapp.widgets.AppTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/color_black"
                        app:textStyle="@integer/OPEN_SANS_REGULAR" />
                </TextSwitcher>

                <ImageView
                    android:id="@+id/ivComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_feed_action"
                    android:src="@drawable/ic_comment_black_24dp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/transition_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/imageGripeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dimen_below_7dp"
                android:orientation="horizontal">

                <com.griper.griperapp.widgets.AppTextView
                    android:id="@+id/textBtnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:background="@drawable/drawable_circle_yes_no"
                    android:gravity="center"
                    android:text="@string/string_no"
                    android:textSize="@dimen/dimen_16sp" />

                <com.griper.griperapp.widgets.AppTextView
                    android:id="@+id/textBtnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:layout_marginStart="@dimen/dimen_5dp"
                    android:layout_toRightOf="@id/textBtnNo"
                    android:background="@drawable/drawable_circle_yes_no"
                    android:gravity="center"
                    android:text="@string/string_yes"
                    android:textSize="@dimen/dimen_16sp" />
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
